Style: Shrink table font at narrow screen widths to avoid layout issues

--- a/pep_sphinx_extensions/pep_theme/static/mq.css
+++ b/pep_sphinx_extensions/pep_theme/static/mq.css
@@ -1,7 +1,21 @@
 @charset "UTF-8";
+
 /* Media Queries */
-@media (max-width: 32.5em) {
-    /* Reduce padding & margins for the smallest screens */
+
+/* Further reduce width of fixed elements for smallest screens */
+@media (max-width: 32em) {
+    pre,
+    code {
+        word-break: break-all;
+    }
+    table th,
+    table td {
+        font-size: 3vw;
+    }
+}
+
+/* Reduce padding & margins for smaller screens */
+@media (max-width: 36em) {
     section#pep-page-section > header > h1 {
         padding-right: 0;
         border-right: none;
@@ -17,7 +31,8 @@
         padding: 0 0.1rem;
     }
 }
-@media (min-width: 32.5em) {
+
+@media (min-width: 36em) {
     section#pep-page-section {
         max-width: 40em;
         width: 100%;
@@ -25,6 +40,7 @@
         padding: .5rem 1rem 0;
     }
 }
+
 @media (min-width: 54em) {
     section#pep-page-section {
         max-width: 75em;
